# tvteck

./: .gitignore  README.md  pyproject.toml
data/: sample_parameters.yaml
docs/: cli.md  parameter.md
docs/image/: tvteck_architecture.drawio
src/: __init__.py  base_cli.py  tvteck.py
src/controller/: controller.py  controller_cli.py  controller_parameter.py
src/controller/livetv_kpi/: livetv_kpi_parameter.py
src/device/: device.py  device_cli.py  device_parameter.py
src/e2e_core/client/: client.py
src/e2e_core/job/: job.py  job_cli.py  job_info.py
src/lib/: yaml_util.py
src/parameter/: base_parameter.py  parameter_manager.py
src/test_manager/: test_manager.py  test_manager_cli.py  test_manager_parameter.py
src/update/: update.py  update_cli.py  update_parameter.py  update_paramter.py
